--- a/src/app/features/tickets/pages/tickets-list.page.html
+++ b/src/app/features/tickets/pages/tickets-list.page.html
@@ -1,6 +1,7 @@
 <div class="page">
   <header class="page-header">
     <h1>Tickets de soporte</h1>
+    <a class="btn-new" routerLink="/tickets/new">+ Nuevo ticket</a>
   </header>
 
   <div class="filters" [formGroup]="filterForm">
